# agentos

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  DECISIONS.md  LICENSE  README.md  SECURITY.md
.agentos/: decisions.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.thruline/: decisions.md
.thruline/snapshots/: 2026-07-03T10-10-09.md  2026-07-03T10-42-12.md  2026-07-03T10-43-34.md
commands/: decide.md  note.md  resolve.md  snapshot.md  status.md  steer.md  wrap.md
crates/agentos-cli/: Cargo.toml
crates/agentos-cli/src/: hooks.rs  main.rs  setup.rs  statusline.rs
crates/agentos-core/: Cargo.toml
crates/agentos-core/src/: lib.rs  model.rs  redact.rs  store.rs
crates/agentos-mcp/: Cargo.toml
crates/agentos-mcp/src/: lib.rs
crates/thruline-cli/: Cargo.toml
crates/thruline-cli/src/: hooks.rs  main.rs  setup.rs  statusline.rs
crates/thruline-core/: Cargo.toml
crates/thruline-core/src/: lib.rs  redact.rs  store.rs  trust.rs
crates/thruline-mcp/: Cargo.toml
crates/thruline-mcp/src/: lib.rs
docs/: 01-vision.md  02-architecture.md  03-security.md  04-roadmap.md  05-launch-and-distribution.md
docs/setup/: claude-code.md  command-code.md  other-agents.md  what-works-where.md
hooks/: hooks.json
site/: docs.html  index.html
