[package]
name = "agentos-cli"
description = "Companion layer for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agentos"
path = "src/main.rs"

[dependencies]
agentos-core = { path = "../agentos-core" }
anyhow.workspace = true
clap.workspace = true
