[package]
name = "agentos-mcp"
description = "MCP stdio server exposing agentos state as tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-core = { path = "../agentos-core" }
anyhow.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
