[package]
name = "thruline-cli"
description = "Companion layer for AI coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "thruline"
path = "src/main.rs"

[dependencies]
thruline-core = { path = "../thruline-core", version = "0.0.3" }
thruline-mcp = { path = "../thruline-mcp", version = "0.0.3" }
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
