[package]
name = "thruline-core"
description = "State model for the thruline companion: decisions, review queue, snapshots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
